--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>to get text from user's speech</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>get user voice</string>
 </dict>
 </plist>
