--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animate_do: ^3.3.4
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_tts: ^4.2.0
   http: ^1.2.2
   speech_to_text: ^7.0.0
 
